<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.25"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/titulo"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/unjugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_player"
            style="@style/boton"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                style="@style/radio"/>

            <RadioButton
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                style="@style/radio"/>

            <RadioButton
                android:id="@+id/imposible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insane"
                style="@style/radio"/>

        </RadioGroup>

        <Button
            android:id="@+id/dosjugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_players"
            style="@style/boton"
            />


    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3"/>

    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:columnCount="3"
         android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/a3"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b2"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c1"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c2"
            style="@style/casilla"/>

        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"/>

    </GridLayout>




</LinearLayout>